Fix page display issues & overflow

--- a/src/pages/project-page/ProjectPage.scss
+++ b/src/pages/project-page/ProjectPage.scss
@@ -21,10 +21,11 @@
     background-color: transparent;
     color: var(--footer-text-color);
     position: relative;
-    min-height: 100vh;
-    width: 100vw;
     z-index: 0;
 
+    @media screen and (max-width: 800px) {
+      padding: 0px 0vw;
+    }
 
   
     .project{
@@ -52,14 +53,13 @@
   
   }
   .case-study-section{
-    display: flex;
+    // display: flex;
     margin-bottom: 50vh;
     align-items: center;
     justify-content: center;
     text-align: start;
     padding: 0px 20vw;
     box-sizing: border-box;
-    // text-align: center;
 
     h2{
       margin-top: 3rem;
@@ -78,6 +78,7 @@
       margin-left: 1.5rem;
       margin-right: 1rem;
       width: fit-content;
+      hyphens: auto;
     }
     ul{
       text-align: justify;
@@ -86,6 +87,7 @@
       width: fit-content;
       margin-left: 1.5rem;
       margin-right: 1rem;
+      hyphens: auto;
     }
 
     @media screen and (max-width: 800px) {
@@ -104,14 +106,20 @@
         align-items: center;
         justify-content: start;
 
-        @media screen and (max-width: 800px) {
-          grid-template-columns: repeat(5, 1fr);
+        @media screen and (max-width: 1200px) {
+          grid-template-columns: repeat(6, 1fr);
         }
         @media screen and (max-width: 1000px) {
           grid-template-columns: repeat(6, 1fr);
         }
-        @media screen and (max-width: 1200px) {
-          grid-template-columns: repeat(6, 1fr);
+        @media screen and (max-width: 800px) {
+          grid-template-columns: repeat(5, 1fr);
+        }
+        @media screen and (max-width: 600px) {
+          grid-template-columns: repeat(4, 1fr);
+        }
+        @media screen and (max-width: 400px) {
+          grid-template-columns: repeat(3, 1fr);
         }
       }
     }
